# Footage-Manipulation

./: .gitignore  CMakeLists.txt  README.md  calibrate.cpp  cv3stab.rb  scp-splits.sh
lib/: CMakeLists.txt  ert.cpp  ert.h
tools/: CMakeLists.txt  calibrate.cpp  correct_distort.cpp  split_vid.cpp  stabilize.cpp  stabilizedev.cpp  undistort.cpp  videostab.cpp
